2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Import form action access rights in genmenu.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Limit form actions access rights to the call right.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* doc/tutorials/DmpDb:
	* tools/genmenu.py:
	Initial support for form actions in DMP.

2009-09-12  Milan Zamazal  <pdm@brailcom.org>

	* tools/pytis-transform.el:
	Tool for adding the recently introduced common `id' argument in the sources.

2009-09-12  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* lib/pytis/presentation/spec.py:
	Make mandatory argument `id' in in Action, Binding and Filter constructors.
	
	This is a backwards incompatible change and all applications and Wiking must be
	updated.
	

2009-06-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	* lib/pytis/data/types_.py:
	LTree type added.

2009-12-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/inputfield.py:
	Fix background colors for some kinds of non-editable fields.

2009-12-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	Filter out unchanged RecordForm data on update again, but update their values first.

2009-12-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	When retrieving RecordForm data, retrieve all data, not only changed ones.
	
	All data have to be retrieved because information about changed fields may be
	incorrect.  At least no change is signalled for some CbComputer fields that are
	not displayed in the RecordForm.
	
	This change should be revised later.
	

2009-12-08  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/list.py:
	Fix XLS export.

2009-12-08  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/form.py:
	Don't perform the DB operation when EditForm has not changed, but commit the transaction.

2009-11-06  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py: