@@ -1,5 +1,12 @@
 2009-09-15  Milan Zamazal  <pdm@brailcom.org>
 
+	* db/db_pytis_menu.py:
+	* doc/tutorials/DmpDb:
+	* tools/genmenu.py:
+	Use form names, not form actions, in form action fullnames and shortnames.
+
+2009-09-15  Milan Zamazal  <pdm@brailcom.org>
+
 	* tools/genmenu.py:
 	Import form action access rights in genmenu.
 
